# clinical-ims

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: settings.py  urls.py
records/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
records/management/commands/: load_sample_data.py
records/migrations/: 0001_initial.py  0002_patient_created_by.py
static/css/: app.css
static/js/: analytics.js
templates/: base.html
templates/records/: analytics.html  confirm_delete.html  dashboard.html  form_errors.html  patient_detail.html  patient_form.html  patient_list.html  scan_detail.html  scan_form.html  scan_list.html
templates/registration/: login.html  password_change_done.html  password_change_form.html
tests/: e2e_smoke.py
