[project]
name = "clinical-information-management-system"
version = "0.1.0"
description = "A Django application for managing clinical patients, scans, and analytics."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.2,<5.3",
    "pillow>=12.0",
    "python-dotenv>=1.0",
]
